--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack": "^5.72.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.1115.0"
+    "aws-sdk": "^2.1115.0",
+    "uuid": "^8.3.2"
   }
 }
