--- a/serverless.yml
+++ b/serverless.yml
@@ -10,13 +10,19 @@ provider:
   memorySize: 256
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-1'}
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:PutItem
+      Resource:
+        - arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/AuctionTable
 
 resources:
   Resources:
     AuctionTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: Auction
+        TableName: AuctionTable
         BillingMode: PAY_PER_REQUEST
         AttributeDefinitions:
           - AttributeName: id
