--- a/serverless.yml
+++ b/serverless.yml
@@ -11,26 +11,11 @@ provider:
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-1'}
   iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - dynamodb:PutItem
-      Resource:
-        - arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/AuctionTable
+    - ${file(./iam/auctionTableIAM.yaml):AuctionTableIAM}
 
 resources:
   Resources:
-    AuctionTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: AuctionTable
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
-  
+    AuctionTable: ${file(./resources/auctionTable.yaml):AuctionTable}
 functions:
   createAuction:
     handler: src/handlers/createAuction.handler
