--- a/resources/auctionTable.yml
+++ b/resources/auctionTable.yml
@@ -1,7 +1,7 @@
 AuctionTable:
   Type: AWS::DynamoDB::Table
   Properties:
-    TableName: AuctionTable-${self.provider.stage}
+    TableName: AuctionTable-${self:provider.stage}
     BillingMode: PAY_PER_REQUEST
     AttributeDefinitions:
       - AttributeName: id
