added getAuction handler

--- a/serverless.yml
+++ b/serverless.yml
@@ -31,6 +31,12 @@ functions:
       - http:
           method: GET
           path: /auctions
+  getAuction:
+    handler: src/handlers/getAuction.handler
+    events:
+      - http:
+          method: GET
+          path: /auction/{id}
 
 custom:
   AuctionTable:
