--- a/serverless.yml
+++ b/serverless.yml
@@ -37,6 +37,12 @@ functions:
       - http:
           method: GET
           path: /auction/{id}
+  placeBid:
+    handler: src/handlers/placeBid.handler
+    events:
+      - http:
+          method: PATCH
+          path: /auction/{id}/bid
 
 custom:
   AuctionTable:
