--- a/serverless.yml
+++ b/serverless.yml
@@ -43,6 +43,10 @@ functions:
       - http:
           method: PATCH
           path: /auction/{id}/bid
+  processAuctions:
+    handler: src/handlers/processAuctions.handler
+    events:
+      - schedule: rate(1 minute)
 
 custom:
   AuctionTable:
