--- a/iam/auctionTableIAM.yml
+++ b/iam/auctionTableIAM.yml
@@ -5,5 +5,7 @@ AuctionTableIAM:
     - dynamodb:Scan
     - dynamodb:GetItem
     - dynamodb:UpdateItem
+    - dynamodb:Query
   Resource:
     - ${self:custom.AuctionTable.arn}
+    - !Join ['/', [ '${self:custom.AuctionTable.arn}', 'index', 'statusAndEndDate' ]]
