--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@middy/http-error-handler": "^2.5.7",
     "@middy/http-event-normalizer": "^2.5.7",
     "@middy/http-json-body-parser": "^2.5.7",
+    "@middy/validator": "^2.5.7",
     "aws-sdk": "^2.1115.0",
     "http-errors": "^2.0.0",
     "uuid": "^8.3.2"
