add cors support

--- a/serverless.yml
+++ b/serverless.yml
@@ -32,6 +32,7 @@ functions:
       - http:
           method: POST
           path: /auction
+          cors: true
           authorizer: ${self:custom.authorizer}
   getAuctions:
     handler: src/handlers/getAuctions.handler
@@ -39,6 +40,7 @@ functions:
       - http:
           method: GET
           path: /auctions
+          cors: true
           authorizer: ${self:custom.authorizer}
   getAuction:
     handler: src/handlers/getAuction.handler
@@ -46,6 +48,7 @@ functions:
       - http:
           method: GET
           path: /auction/{id}
+          cors: true
           authorizer: ${self:custom.authorizer}
   placeBid:
     handler: src/handlers/placeBid.handler
@@ -53,6 +56,7 @@ functions:
       - http:
           method: PATCH
           path: /auction/{id}/bid
+          cors: true
           authorizer: ${self:custom.authorizer}
   uploadAuctionPicture:
     handler: src/handlers/uploadAuctionPicture.handler
@@ -60,6 +64,7 @@ functions:
       - http:
           method: PATCH
           path: /auction/{id}/picture
+          cors: true
           authorizer: ${self:custom.authorizer}
   processAuctions:
     handler: src/handlers/processAuctions.handler
