--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@middy/core": "^2.5.7",
+    "@middy/http-cors": "^3.0.3",
     "@middy/http-error-handler": "^2.5.7",
     "@middy/http-event-normalizer": "^2.5.7",
     "@middy/http-json-body-parser": "^2.5.7",
